<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/text_view"
        style="@style/main_text_style"
        android:text="@string/sign_in_2_text"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_login"
        style="@style/input_text_style"
        android:hint="@string/sign_in_2_login"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_text_password"
        style="@style/input_text_style"
        android:hint="@string/sign_in_2_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/text_view_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_2_forgot_password"
        android:layout_marginBottom="50dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/black_rounded_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_in_2_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password" />

</androidx.constraintlayout.widget.ConstraintLayout>