<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/roleId_tv"
        style="@style/base_text_field_title_style"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/roleid" />

    <EditText
        android:id="@+id/roleId_et"
        style="@style/base_text_field_style"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/roleId_tv"/>

    <TextView
        android:id="@+id/username_tv"
        style="@style/base_text_field_title_style"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/roleId_et"/>

    <EditText
        android:id="@+id/username_et"
        style="@style/base_text_field_style"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/username_tv"/>

    <TextView
        android:id="@+id/email_tv"
        style="@style/base_text_field_title_style"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_et"/>

    <EditText
        android:id="@+id/email_et"
        style="@style/base_text_field_style"
        android:enabled="false"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/email_tv"/>
    <TextView
        android:id="@+id/permission_tv"
        style="@style/base_text_field_title_style"
        android:text="@string/permissions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/permissions_rv"
        style="@style/base_recyclerview_style"
        tools:listitem="@layout/item"
        app:layout_constraintTop_toBottomOf="@id/permission_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>